--- a/web/index.html
+++ b/web/index.html
@@ -72,7 +72,7 @@
     Racing for Automatic Algorithm Configuration</a></b>. <em>Operations
     Research Perspectives</em>, 3:43&ndash;58, 2016.<br>
     [<a href=
-    "LopezIbanez_bib.html#LopDubPerStuBir2016irace">bibtex</a>|<a href="http://dx.doi.org/10.1016/j.orp.2016.09.002">doi:&nbsp;10.1016/j.orp.2016.09.002</a>]</dd>
+    "http://lopez-ibanez.eu/LopezIbanez_bib.html#LopDubPerStuBir2016irace">&nbsp;bibtex&nbsp;</a>|<a href="http://dx.doi.org/10.1016/j.orp.2016.09.002">&nbsp;doi:&nbsp;10.1016/j.orp.2016.09.002&nbsp;</a>]</dd>
 
     <dt id="LopDubStu2011irace">[2]</dt>
 
@@ -197,7 +197,7 @@
 
    <p><b>NOTE:</b> After installation, the package can be used from within R or
    as a command-line tool. See the <a href=
-   "files/README.html"><strong>README</strong></a> file for more
+   "README.html"><strong>README</strong></a> file for more
    information.</p>
 
    <p>The software is provided as an R package available from CRAN. This means
@@ -219,11 +219,11 @@
    (MacOS X), or <code>.zip</code> (Windows).</p>
   </div>
 
-  <p>See the <a href="files/README.html">README</a> file in case you have
+  <p>See the <a href="README.html">README</a> file in case you have
   troubles.</p>
 
   <div class="sectionBody">
-   <span>[ <a href="files/README.html"><strong>README</strong></a> ]</span>
+   <span>[ <a href="README.html"><strong>README</strong></a> ]</span>
    <span class="sourcelink">[ <a href=
    "http://cran.r-project.org/package=irace"><strong>Download irace package
    from CRAN</strong></a> ]</span> <span class="sourcelink">[ <a class="pdfdoc"
@@ -252,7 +252,7 @@
    <!-- img style="padding: 5px;" alt="Get Firefox!" title="Get Firefox!" -->
     <!-- width="80" height="15" src="img/white_2.gif" --></p>
 
-   <p id="lastupdate"><!-- hhmts start -->Last modified: 21 February 2017 
+   <p id="lastupdate"><!-- hhmts start -->Last modified: 26 March 2017 
    <!-- hhmts end --></p>
   </div><!-- counter.htm -->
  </div>
