--- a/web/README.html
+++ b/web/README.html
@@ -69,16 +69,19 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li><a href="#many-tuning-runs-in-parallel">Many tuning runs in parallel</a></li>
 <li><a href="#parallelize-one-tuning">Parallelize one tuning</a></li>
 </ul></li>
+<li><a href="#license">License</a></li>
 <li><a href="#frequently-asked-questions">Frequently Asked Questions</a></li>
 </ul>
 </div>
 <hr />
 <h1 id="irace-iterated-racing-for-automatic-algorithm-configuration"><strong>irace</strong>: Iterated Racing for Automatic Algorithm Configuration</h1>
 <p><a href="https://cran.r-project.org/package=irace"><img src="https://www.r-pkg.org/badges/version-last-release/irace" alt="CRAN Status" /></a> <a href="https://CRAN.R-project.org/package=irace"><img src="https://cranlogs.r-pkg.org/badges/grand-total/irace" alt="CRAN Downloads" /></a></p>
+<p>[ <a href="http://iridia.ulb.ac.be/irace/"><strong>Homepage</strong></a> ] [ <a href="https://cran.r-project.org/package=irace/vignettes/irace-package.pdf"><strong>User Guide (PDF)</strong></a> ]</p>
 <p><strong>Maintainers:</strong> <a href="http://lopez-ibanez.eu">Manuel L&#243;pez-Ib&#225;&#241;ez</a>, Leslie P&#233;rez C&#225;ceres</p>
 <p><strong>Creators:</strong> <a href="http://lopez-ibanez.eu">Manuel L&#243;pez-Ib&#225;&#241;ez</a>, J&#233;r&#233;mie Dubois-Lacoste</p>
 <p><strong>Contributors:</strong> J&#233;r&#233;mie Dubois-Lacoste, Thomas St&#252;tzle, Mauro Birattari, Eric Yuan and Prasanna Balaprakash.</p>
 <p><strong>Contact:</strong> <a href="https://groups.google.com/d/forum/irace-package" class="uri">https://groups.google.com/d/forum/irace-package</a></p>
+<hr />
 <h1 id="introduction">Introduction</h1>
 <p>The <strong>irace</strong> package implements the Iterated Race method, which is a generalization of the Iterated F-race method for the automatic configuration of optimization algorithms, that is, the tuning of their parameters by finding the most appropriate settings given a set of instances of an optimization problem. It builds upon the race package by Birattari and it is implemented in R.</p>
 <p><strong>Keywords:</strong> automatic configuration, offline tuning, parameter tuning, racing, F-race.</p>
@@ -178,6 +181,15 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <p>Check the help of <code>parallel-irace</code> by running it without parameters.</p>
 <h2 id="parallelize-one-tuning">Parallelize one tuning</h2>
 <p>A single run of irace can be done much faster by executing the calls to <code>targetRunner</code> (the runs of the algorithm being tuned) in parallel. See the <a href="https://cran.r-project.org/package=irace/vignettes/irace-package.pdf">user guide</a> for the details.</p>
+<h1 id="license">License</h1>
+<p>This software is Copyright (C) 2011-2017 Manuel L&#243;pez-Ib&#225;&#241;ez and J&#233;r&#233;mie Dubois-Lacoste.</p>
+<p>This program is free software (software libre); you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version.</p>
+<p>This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the <a href="https://cran.r-project.org/web/licenses/GPL-3">GNU General Public License</a> for more details.</p>
+<p><strong>IMPORTANT NOTE:</strong> Please be aware that the fact that this program is released as Free Software does not excuse you from scientific propriety, which obligates you to give appropriate credit! If you write a scientific paper describing research that made substantive use of this program, it is your obligation as a scientist to (a) mention the fashion in which this software was used in the Methods section; (b) mention the algorithm in the References section. The appropriate citation is:</p>
+<blockquote>
+<p>Manuel L&#243;pez-Ib&#225;&#241;ez, J&#233;r&#233;mie Dubois-Lacoste, Leslie P&#233;rez C&#225;ceres, Thomas St&#252;tzle, and Mauro Birattari. <a href="http://dx.doi.org/10.1016/j.orp.2016.09.002"><strong>The irace package: Iterated Racing for Automatic Algorithm Configuration.</strong></a> <em>Operations Research Perspectives</em>, 2016.</p>
+</blockquote>
+<p>The race package is Copyright (C) 2003 Mauro Birattari, used under the GPL.</p>
 <h1 id="frequently-asked-questions">Frequently Asked Questions</h1>
 <p>The <a href="https://cran.r-project.org/package=irace/vignettes/irace-package.pdf">user guide</a> contains a list of frequently asked questions.</p>
 <!--
