* web/: Remove README.html. Link to README in CRAN.

--- a/web/index.html
+++ b/web/index.html
@@ -204,7 +204,7 @@
 
    <p><b>NOTE:</b> After installation, the package can be used from within R or
    as a command-line tool. See the <a href=
-   "README.html"><strong>README</strong></a> file for more information.</p>
+   "https://cran.r-project.org/web/packages/irace/readme/README.html"><strong>README</strong></a> file for more information.</p>
 
    <p>The software is provided as an R package available from CRAN. This means
    that it can be installed by invoking R:</p>
@@ -225,11 +225,11 @@
    (MacOS X), or <code>.zip</code> (Windows).</p>
   </div>
 
-  <p>See the <a href="README.html">README</a> file in case you have
+  <p>See the <a href="https://cran.r-project.org/web/packages/irace/readme/README.html">README</a> file in case you have
   troubles.</p>
 
   <div class="sectionBody">
-   <span>[ <a href="README.html"><strong>README</strong></a> ]</span>
+   <span>[ <a href="https://cran.r-project.org/web/packages/irace/readme/README.html"><strong>README</strong></a> ]</span>
    <span class="sourcelink">[ <a href=
    "http://cran.r-project.org/package=irace"><strong>Download irace package
    from CRAN</strong></a> ]</span> <span class="sourcelink">[ <a class="pdfdoc"
@@ -258,7 +258,7 @@
    <!-- img style="padding: 5px;" alt="Get Firefox!" title="Get Firefox!" -->
     <!-- width="80" height="15" src="img/white_2.gif" --></p>
 
-   <p id="lastupdate"><!-- hhmts start -->Last modified: 4 August 2017 
+   <p id="lastupdate"><!-- hhmts start -->Last modified: 16 April 2020 
    <!-- hhmts end --></p>
   </div><!-- counter.htm -->
  </div>
